letter spacing & line color  fix

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -22,7 +22,8 @@
 
 .mt-4
 	margin-top: 2em
-
+.ttn
+	text-transform: none !important
 
 .mt-5
 	margin-top: 2.5em
@@ -85,6 +86,9 @@ button.btn
 		position: absolute
 		bottom: 0
 		left: 0
+	&.section__main-heading_no-line
+		&:after
+			display: none
 
 .section__heading
 	font-weight: normal
@@ -133,13 +137,53 @@ button.btn
 			left: 0
 			margin-left: 0
 			border-color: #eeeeee
+	&.section__heading_quote
+		position: relative
+		padding-top: 70px
+		padding-bottom: 70px
+		margin: 0
+		&:before
+			content: ''
+			display: block
+			width: 23px
+			height: 21px
+			position: absolute
+			top: 0
+			left: 50%
+			margin-left: -11.5px
+			background: url(../img/quote.png) 0 0 no-repeat
+		&:after
+			border: 0
+			content: ''
+			display: block
+			width: 23px
+			height: 21px
+			position: absolute
+			bottom: 0
+			left: 50%
+			margin-left: -11.5px
+			transform: rotate(180deg)
+			background: url(../img/quote.png) 0 0 no-repeat
+	&.section__heading_size_md
+		font-size: 24px
+	&.section__heading_no-mb
+		margin-bottom: 0
 .section__semi-heading
 	font-size: 16px
 	color: #232323
 	letter-spacing: 0.1em
 
 
-
+.section_programm
+	background-image: url(../img/bg-programm.jpg)
+	background-repeat: no-repeat
+	background-position: center
+	background-size: cover
+	.overlay
+		background-color: rgba(255,255,255,.8)
+	.ordered-features
+		padding-left: 90px
+		padding-right: 90px
 
 .section__text
 	font-size: 16px
@@ -233,6 +277,7 @@ button.btn
 	display: flex
 	justify-content: space-around
 	.ordered-features__item
+		flex: 1 1 0
 		text-align: center
 		font-size: 16px
 		color: #232323
@@ -260,6 +305,93 @@ button.btn
 		p
 			width: 170px
 			margin: 0 auto
+		div
+			padding-left: 15px
+			padding-right: 15px
+	&.ordered-features_3-col
+		flex-wrap: wrap
+		.ordered-features__item
+			flex: 0 1 33.3333%
+.flex-column
+	flex-direction: column
+
+.girl-plan
+	position: relative
+	.girl-plan-headers
+		position: absolute
+		top: 0
+		left: 0
+
+.girl-plan-scheme
+	width: 333px
+	margin-left: auto
+	margin-right: auto
+	position: relative
+	.img
+		width: 100%
+		height: auto
+	.dot
+		width: 45px
+		height: 45px
+		display: inline-block
+		position: absolute
+		opacity: .3
+		transition: .3s ease
+		background: url(../img/zone.png) 0 0 no-repeat
+		&.active
+			opacity: 1
+		&.dot-face
+			top: 30.4%
+			&.dot-face_1
+				left: 32.43%
+			&.dot-face_2
+				right: 32.43%
+		&.dot-neck
+			left: 50.15%
+			top: 47.96%
+
+		&.dot-cleavage
+			left: 17.5%
+			top: 64.07%
+		&.dot-palm
+			left: 63.06%
+			top: 69.126%
+
+		&.dot-eyebrows
+			top: 20.77%
+			&.dot-eyebrows_1
+				left: 32.43%
+			&.dot-eyebrows_2
+				right: 32.43%
+		&.dot-eyelids
+			top: 25.24%
+			left: 55.85%
+
+		&.dot-lips
+			top: 35.72%
+			left: 42.94%
+.scheme
+	background-color: #fff
+	display: flex
+	justify-content: space-around
+	padding-top: 40px
+	padding-bottom: 40px
+	.item
+		position: relative
+		text-align: center
+		&:after
+			width: 22px
+			height: 42px
+			background: url(../img/arr-right.png) 0 0 no-repeat
+			display: block
+			content: ''
+			right: -110px
+			top: 50%
+			margin-top: -21px
+			position: absolute
+		&:last-child
+			&:after
+				display: none
 
 .icons-list
 	display: flex
@@ -271,6 +403,7 @@ button.btn
 		line-height: 1.25
 		letter-spacing: 0.1em
 		margin-top: 2em
+		flex: 1 1 0
 		.icon
 			width: 71px
 			height: 71px
@@ -294,11 +427,24 @@ button.btn
 				bottom: 0
 				left: 50%
 				margin-left: -36px
+			&.top-line
+				padding-top: 17px
+				&:after
+					bottom: auto
+					top: 0
+
 		p
 			width: 310px
 			margin: 0 auto
 
+		div
+			padding-left: 15px
+			padding-right: 15px
 
+	&.icons-list_3-col
+		flex-wrap: wrap
+		.icons-list__item
+			flex: 0 1 33.3333%
 
 .product-card
 	.product-card__heading
@@ -713,6 +859,7 @@ button.btn
 	.school-menu
 		display: flex
 		height: 666px
+		justify-content: center
 		.school-menu__heading
 			letter-spacing: 0.075em
 			color: #232323
@@ -1038,6 +1185,20 @@ button.btn
 		width: 320px
 		border-color: transparent
 
+.plus
+	color: #66b0da !important
+	font-size: 60px !important
+
+.product-slider.items
+	.item
+		width: 100%
+		margin-bottom: 0
+		margin-left: 0
+		margin-right: 0
+
+._product-item-container
+	position: relative
+
 .sidebar
 	padding: 15px
 	margin-bottom: 4em
@@ -1063,6 +1224,15 @@ button.btn
 	.btn
 		width: 100%
 		margin-bottom: 10px
+
+.catalog-wrapper
+	.items > .item
+		.title
+			&:after
+				background-color: #66b0da
+
+.catalog-wrapper .items > .item .caption a
+	letter-spacing: 0.1em
 
 .calendar
 	padding-bottom: 73px
@@ -1283,6 +1453,11 @@ button.btn
 		color: #75b8de
 		text-decoration: none
 
+.bg-grey
+	.team
+		.team__item
+			background-color: #fff
+
 .section_gallery
 	img
 		width: 100%
@@ -1403,7 +1578,43 @@ button.btn
 		&:hover
 			background-position: -216px 0px
 
-
+.girl-plan-headers
+	display: flex
+	width: 100%
+	flex-wrap: wrap
+	.girl-plan-headers__item
+		text-align: center
+		flex-basis: 50%
+		font-size: 16px
+		color: #232323
+		line-height: 1.25
+		letter-spacing: 0.1em
+		margin-top: 4em
+		opacity: .5
+		transition: .3s ease
+		cursor: pointer
+		&.hover
+			opacity: 1
+		span
+			font-size: 36px
+			color: #66b0da
+			display: block
+			position: relative
+			padding-bottom: 10px
+			margin-bottom: 16px
+			&:after
+				content: ''
+				display: block
+				width: 72px
+				height: 1px
+				background-color: #66b0da
+				position: absolute
+				bottom: 0
+				left: 50%
+				margin-left: -36px
+		div
+			padding-left: 15px
+			padding-right: 15px
 .section_slider
 	position: relative
 	.promo-link
